# Analog-sim

./: .gitignore  Analogsim  CMakeLists.txt  Makefile  README.md  Rectangle.cpp  Rectangle.h  a.out  colours.h  component.cpp  component.h  component.hpp  components.py  functions.cpp  functions.h  gui.cpp  gui.h  gui.hpp  main  main.cpp  main.h  main.md  main.py  parts.h  parts.hpp  parts.py  serializer.cpp  serializer.h  settings.h
.github/workflows/: cmake-multi-platform.yml
imgui-subbuild/: CMakeCache.txt  CMakeLists.txt
include/: RaylibSerialize.hpp  raylib.h  raymath.h  rlImGui.cpp
include/nanovg/: nanovg_gl.h
include/rapidjson/: allocators.h  document.h  pointer.h  reader.h  schema.h
include/rapidjson/error/: error.h
include/rapidjson/internal/: biginteger.h  diyfp.h
main.dSYM/Contents/Resources/DWARF/: main
parts/: areaPolygon.cpp  areaPolygon.h  average.cpp  dial.cpp  dial.h  dotProduct.cpp  dotProduct.h  normalizePolygonA.cpp  normalizePolygonA.h  normalizePolygonB.cpp  normalizePolygonC.cpp  normalizePolygonC.h  plus.cpp  plus.h  sensor.cpp  sensor.h
src/: component.cpp  component.h  gui.cpp  gui.h  matrix.cpp  matrix.h  parts.h  serializer.cpp  serializer.h
src/parts/: areaPolygon.cpp  average.cpp  average.h  boxKernel.cpp  boxKernel.h  c24.cpp  c24.h  combineVector.cpp  combineVector.h  dial.cpp  dial.h  dotProduct.cpp  lightBalance.cpp  lightBalance.h  matrixKernel.cpp  matrixKernel.h  middlePolygon.cpp  middlePolygon.h  normalizePolygon.cpp  normalizePolygon.h  normalizePolygonA.cpp  normalizePolygonB.cpp  normalizePolygonB.h  normalizePolygonC.cpp  plus.cpp  polgonPairRegister.cpp  polgonPairRegister.h  projectVector.cpp  projectVector.h  scaleVector.cpp  scaleVector.h  sensor.cpp  separateVector.cpp  separateVector.h  vectorBetweenVectors.cpp  vectorBetweenVectors.h
